--- a/3356-java-web-front-main/detalhes.html
+++ b/3356-java-web-front-main/detalhes.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/detalhes.css">
 
-    <title>Screenmatch</title>
+    <title>Movie BataDase</title>
 </head>
 
 <body>
