--- a/3356-java-web-front-main/index.html
+++ b/3356-java-web-front-main/index.html
@@ -11,14 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/home.css">
-    <title>Screenmatch</title>
+    <link rel="icon" href="img/teste.png">
+    <title>Movie BataDase</title>
 </head>
 
 <body>
     <header class="cabecalho">
         <div class="cabecalho__logo">
-            <img src="./img/logo.png" alt="Logo ScreenMatch">
-            <h1>Screen match</h1>
+            <img src="./img/teste.png" alt="Logo ScreenMatch">
+            <h1>Movie BataDase</h1>
             <select data-categorias>
                 <option value="todos">Categorias</option>
                 <option value="comédia">Comédia</option>
@@ -45,29 +46,26 @@
     </header>
 
     <main>
-        <section data-name="lancamentos" class="section">
-            <h2>
-                Lançamentos no ScreenMatch
-            </h2>
-
-
-        </section>
-
         <section data-name="top5" class="section">
             <h2>
-                Titulos populares no ScreenMatch
+                Titulos populares no Movie BataDase
             </h2>
+        </section>
 
+        <section data-name="lancamentos" class="section">
+            <h2>
+                Lançamentos no Movie BataDase
+            </h2>
         </section>
 
         <section data-name="series" class="section">
             <h2>
-                Titulos no ScreenMatch
+                Titulos no Movie BataDase
             </h2>
         </section>
 
         <section data-name="categoria" class="hidden pesquisa">
-            <h2>Titulos no ScreenMatch</h2>
+            <h2>Titulos no Movie BataDase</h2>
         </section>
     </main>
     <script src="./scripts/index.js" type="module"></script>
